--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </tr> 
                     <tr>
                         <td>
-                            <span id = "i1"><input type="text" id = "i1"></span>
+                            <input type="text" id = "i1" autocomplete="off">
                         </td>
                     </tr>
                  </table>
@@ -30,7 +30,7 @@
                     </tr> 
                     <tr>
                         <td>
-                            <span id = "i2"><input type="text"></span>
+                            <input type="text" id="i2" autocomplete="off">
                         </td>
                     </tr>
                  </table>
@@ -42,7 +42,7 @@
                     </tr> 
                     <tr>
                         <td>
-                            <span id = "i3"><input type="text"></span>
+                            <input type="text" id = "i3" autocomplete="off">
                         </td>
                     </tr>
                  </table>
@@ -56,7 +56,7 @@
                    </tr> 
                    <tr>
                        <td>
-                        <span id = "i4"><input type="text"></span>
+                        <input type="text" id = "i4" autocomplete="off">
                        </td>
                    </tr>
                 </table>
@@ -66,8 +66,10 @@
                     <tr>
                         <td colspan="2"><select id="root" name="root">
                             <option>Select Root</option>
-                            <option value="que">que</option>
-                            <option value="ben">ben</option>
+                            <option value="fore">fore</option>
+                            <option value="voro">voro</option>
+                            <option value="log">log/loc/loq</option>
+                            <option value="vox">vox</option>
                         </select>
                         </td>
                         <tr>
@@ -85,7 +87,7 @@
                     </tr> 
                     <tr>
                         <td>
-                            <span id = "i5"><input type="text"></span>
+                            <input type="text" id = "i5" autocomplete="off">
                         </td>
                     </tr>
                  </table>
@@ -99,7 +101,7 @@
                     </tr> 
                     <tr>
                         <td>
-                            <span id = "i6"><input type="text"></span>
+                            <input type="text" id = "i6" autocomplete="off">
                         </td>
                     </tr>
                  </table>
@@ -111,7 +113,7 @@
                     </tr> 
                     <tr>
                         <td>
-                            <span id = "i7"><input type="text"></span>
+                            <input type="text" id = "i7" autocomplete="off">
                         </td>
                     </tr>
                  </table>
@@ -123,17 +125,20 @@
                     </tr> 
                     <tr>
                         <td>
-                            <span id = "i8"><input type="text"></span>
+                            <input type="text" id = "i8" autocomplete="off">
                         </td>
                     </tr>
                  </table>
             </td>
         </tr>
+        <tr>
+            <td></td>
+            <td> <button type="submit" onclick="myFun()">SUBMIT</button></td>
+            <td></td>
+        </tr>
     </table>
     </div>
-    <div class="flex-box-2">
-        <button type="submit" onclick="myFun()">SUBMIT</button>
+    
     </form>
-    </div>
 </body>
 </html>
